{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 5,
  "lineage": "b2140aa7-d07e-ee81-2e19-77ffa072e89b",
  "resources": [
    {
      "module": "module.dabsvpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295793222430:network-acl/acl-0031846928b4a080e",
            "default_network_acl_id": "acl-0031846928b4a080e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0031846928b4a080e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "295793222430",
            "subnet_ids": null,
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "vpc_id": "vpc-0190388c12d51c2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dabsvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dabsvpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295793222430:route-table/rtb-041c7078f19492188",
            "default_route_table_id": "rtb-041c7078f19492188",
            "id": "rtb-041c7078f19492188",
            "owner_id": "295793222430",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0190388c12d51c2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dabsvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dabsvpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295793222430:security-group/sg-092082b0f758c7d46",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-092082b0f758c7d46",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "295793222430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "-default"
            },
            "tags_all": {
              "Name": "-default"
            },
            "vpc_id": "vpc-0190388c12d51c2a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dabsvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dabsvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:295793222430:vpc/vpc-0190388c12d51c2a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.7.0.0/16",
            "default_network_acl_id": "acl-0031846928b4a080e",
            "default_route_table_id": "rtb-041c7078f19492188",
            "default_security_group_id": "sg-092082b0f758c7d46",
            "dhcp_options_id": "dopt-05e17d24e97cbfbb5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0190388c12d51c2a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041c7078f19492188",
            "owner_id": "295793222430",
            "tags": {
            },
            "tags_all": {
            }
          }
        }
      ]
    }
  ]
}